--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-style-page",
   "version": "0.1.1",
-  "description": "Convert markdown content into HTML file with Github styles (GFW)",
+  "description": "Converting markdown content into HTML file with Github styles (GFW)",
   "main": "lib/index.js",
   "license": "MIT",
   "bugs": {
